--- a/mail.html
+++ b/mail.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="content">
                     <div class="title">
-                        <h2>I love you!</h2>
+                        <h2>Trang à! Tớ thích cậu hihi!</h2>
                     </div>
                     <p>
                         From DangVQ.dev with Love :3
